k8s/dev/dev-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: lolhub-dev-deployment
  namespace: dev
  labels:
    app: lolhub-dev
    keel.sh/policy: minor
    keel.sh/trigger: poll
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lolhub-dev
  template:
    metadata:
      labels:
        app: lolhub-dev
    spec:
      containers:
      - name: lolhub-server
        image: jungj5/lol-hub:0.0.1-server-dev
