k8s/dev/dev-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: lolhub-dev-service
  namespace: dev
spec:
  selector:
    app: lolhub-dev
  ports:
  - protocol: TCP
    port: 80
    targetPort: 1337
