k8s/dev/dev-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: lolhub-dev-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: lolhub-dev-service
          servicePort: 80
